# Policy-Document-Comparison-Assistant

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/pdca_backend/: aa.py  bb.py  ingestion.ipynb  main.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
notebooks/: data-ingestion-POC.ipynb  local_kernel.sh  pyproject.toml
