[project]
name = "policy-docs-comparison-assistant-backend"
version = "1.0.0"
description = "Complete backend application for policy docs comparison assistant"
readme = "README.md"
authors = [
    { name = "Shamith Nakka", email = "shamith301102@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
backend = "pdca_backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdca_backend"]